# jamfest-2025

./: .gitattributes  .gitignore  Cargo.toml  README.md  test.html
engine/: Cargo.toml
engine/src/: audio.rs  error.rs  gc_types.rs  input.rs  lib.rs  ui.rs  video.rs
engine/src/video/: asset_import.rs  camera.rs  mesh-default.wgsl  mesh.wgsl  mesh_render_pipeline.rs  sky.wgsl  sky_pipeline.rs  texture.rs  world.rs
game/: Cargo.toml  index.html  web-build.sh
game/src/: convert-sfx.sh  desktop_main.rs  level.rs  lib.rs  main.rs
game/src/assets/: .hook_label.kra-autosave.kra  .levels_ideas.kra-autosave.kra  bens-bales-icon.kra  bolt_lalbel.kra  bolt_lalbel.kra~  click.flac  click.sfx  click_loud.flac  collect_label.kra  collect_label.kra~  emitter.glb  emitter_label.kra  emitter_label.kra~  envmap_paint.blend  envmap_paint.blend1  floor_tile.glb  goal_label.kra  goal_label.kra~  goal_label.png~  goal_node.glb  goal_node_light.glb  hook_label.kra  hook_label.kra~  hook_node.glb  ingot_label.kra  ingot_label.kra~  ingot_node.glb  label_mix.png~  laser.glb  levels_ideas.kra  levels_ideas.kra~  metal_1.flac  metal_2.flac  metal_3.flac  metal_4.flac  metal_5.flac  metal_pickup.flac  metal_putdown.flac  mix2_label.kra  mix2_label.kra~  (+18 more)
game/src/assets/mat/: pbr_process.sh
game/src/assets/mat/metal_028/: Metal028_4K-JPG.usda  Metal028_4K-JPG.usdc
game/src/assets/mat/metal_031/: Metal031_4K-JPG.usda  Metal031_4K-JPG.usdc
game/src/assets/mat/metal_046/: Metal046B_4K-JPG.usda  Metal046B_4K-JPG.usdc
game/src/assets/wall/: wall_side.glb
game/src/levels/: another_swaps.tmx  crazy_swaps.tmx  hook_something.tmx  intro.tmx  intro_mix.tmx  intro_mix_constrained.tmx  intro_mix_simpler.tmx  locked_mixers.tmx  test.tmx  test.txt  tileset.kra  tileset.kra~  tileset.png~  tileset.tsx
game/src/shaders/: laser.wgsl  select.wgsl
inline_tweak/src/: lib.rs
ponygame/: Cargo.toml
ponygame/src/: audio.rs  gc.rs  gc_types.rs  lib.rs  video.rs
ponygame/src/video/: asset_import.rs  camera.rs  hdr_tonemap.rs  hdr_tonemap.wgsl  mesh.wgsl  mesh_render_pipeline.rs  sky.wgsl  sky_pipeline.rs  texture.rs  world.rs
